--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 25
@@ -17,6 +18,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    // If you need to add more flavors, consider using flavor dimensions.
+    productFlavors {
+        mock {
+            applicationIdSuffix = ".mock"
+        }
+        prod {
+
+        }
+    }
 }
 
 dependencies {
@@ -28,9 +38,9 @@ dependencies {
 
     //TODO use variables for the versions
 
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:cardview-v7:25.2.0'
-    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:appcompat-v7:' + SUPPORT_LIBRARY_VERSION
+    compile 'com.android.support:cardview-v7:' + SUPPORT_LIBRARY_VERSION
+    compile 'com.android.support:design:' + SUPPORT_LIBRARY_VERSION
 
     //Retrofit & Gson
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.0'
@@ -39,11 +49,21 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
 
     //ButterKnife
-    compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile 'com.jakewharton:butterknife:' + BUTTER_KNIFE_VERSION
+    apt 'com.jakewharton:butterknife-compiler:' + BUTTER_KNIFE_VERSION
+//    This causes ButterKnife to stop working in some configurations: https://github.com/JakeWharton/butterknife/issues/463
+//    annotationProcessor 'com.jakewharton:butterknife-compiler:' + BUTTER_KNIFE_VERSION
 
     //Glide
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:glide:' + GLIDE_VERSION
     compile 'com.android.support:support-v4:25.2.0' //really needed by Glide?
+
+    //Dagger
+    compile group: "com.google.dagger", name: "dagger", version: DAGGER_VERSION
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+    apt "com.google.dagger:dagger-compiler:" + DAGGER_VERSION
+
+    //Otto
+    compile 'com.squareup:otto:' + OTTO_VERSION
 
 }
