--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        // Assists in working with annotation processors for Android Studio.
+        // No longer needed with Android Studio 2.2+
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
     }
 }
 
