--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,11 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+SUPPORT_LIBRARY_VERSION=25.2.0
+DAGGER_VERSION=2.9
+GLIDE_VERSION=3.7.0
+BUTTER_KNIFE_VERSION=8.5.1
+OTTO_VERSION = 1.3.7
+
