Add fullscreen activity with High-res photo

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,14 +56,16 @@ dependencies {
 
     //Glide
     compile 'com.github.bumptech.glide:glide:' + GLIDE_VERSION
-    compile 'com.android.support:support-v4:25.2.0' //really needed by Glide?
+    //really needed by Glide?
 
     //Dagger
     compile group: "com.google.dagger", name: "dagger", version: DAGGER_VERSION
-    provided 'org.glassfish:javax.annotation:10.0-b28'
     apt "com.google.dagger:dagger-compiler:" + DAGGER_VERSION
 
     //Otto
     compile 'com.squareup:otto:' + OTTO_VERSION
+
+    //Subsampling Scale Image View
+    compile 'com.davemorrissey.labs:subsampling-scale-image-view:' + SUBSAMPLING_SCALE_IMAGE_VIEW
 
 }
