--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/VisorTheme">
+        <meta-data android:name="com.awoisoak.visor.presentation.configuration.GlideConfiguration"
+                   android:value="GlideModule"/>
         <activity
             android:name=".presentation.postlist.PostsListActivity"
             android:label="@string/app_name"
