--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,17 +36,17 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
 
-    //TODO use variables for the versions
 
+    //Support libraries
     compile 'com.android.support:appcompat-v7:' + SUPPORT_LIBRARY_VERSION
     compile 'com.android.support:cardview-v7:' + SUPPORT_LIBRARY_VERSION
     compile 'com.android.support:design:' + SUPPORT_LIBRARY_VERSION
 
     //Retrofit & Gson
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.0'
-    compile 'com.squareup.retrofit2:retrofit:2.2.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:' + OKHTTP3_LOGGING_INTERCEPTOR
+    compile 'com.squareup.retrofit2:retrofit:' + RETROFIT
+    compile 'com.squareup.retrofit2:converter-gson:' + RETROFIT_CONVERTER_GSON
+    compile 'com.google.code.gson:gson:' + GSON
 
     //ButterKnife
     compile 'com.jakewharton:butterknife:' + BUTTER_KNIFE_VERSION
@@ -56,7 +56,6 @@ dependencies {
 
     //Glide
     compile 'com.github.bumptech.glide:glide:' + GLIDE_VERSION
-    //really needed by Glide?
 
     //Dagger
     compile group: "com.google.dagger", name: "dagger", version: DAGGER_VERSION
