--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,23 @@
 # Project-wide Gradle settings.
-
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
-
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
-
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-
-
 SUPPORT_LIBRARY_VERSION=25.2.0
 DAGGER_VERSION=2.9
 GLIDE_VERSION=3.7.0
 BUTTER_KNIFE_VERSION=8.5.1
-OTTO_VERSION = 1.3.7
-SUBSAMPLING_SCALE_IMAGE_VIEW = 3.6.0
-
+OTTO_VERSION=1.3.7
+SUBSAMPLING_SCALE_IMAGE_VIEW=3.6.0
+RETROFIT=2.2.0
+RETROFIT_CONVERTER_GSON=2.1.0
+OKHTTP3_LOGGING_INTERCEPTOR = 3.4.0
+GSON=2.6.2
