--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/VisorTheme">
-        <meta-data android:name="com.awoisoak.visor.presentation.configuration.GlideConfiguration"
-                   android:value="GlideModule"/>
+        <meta-data
+            android:name="com.awoisoak.visor.presentation.configuration.GlideConfiguration"
+            android:value="GlideModule"/>
+
         <activity
             android:name=".presentation.postlist.PostsListActivity"
             android:label="@string/app_name"
@@ -39,6 +41,16 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_image_fullscreen"
             android:theme="@style/FullscreenTheme">
+        </activity>
+        <activity
+            android:name=".presentation.webview.WebViewActivity"
+            android:label="@string/title_activity_webview"
+            android:parentActivityName=".presentation.postgallery.PostGalleryActivity"
+            android:theme="@style/VisorTheme"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.awoisoak.visor.presentation.postgallery.PostGalleryActivity"/>
         </activity>
     </application>
 
