Add first database approach to suppport offline posts display and remove any Glide cache for high resolution images

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,7 @@ dependencies {
     //Subsampling Scale Image View
     compile 'com.davemorrissey.labs:subsampling-scale-image-view:' + SUBSAMPLING_SCALE_IMAGE_VIEW
 
+    // ORMLite
+    compile 'com.j256.ormlite:ormlite-android:' + ORM_LITE
+
 }
