Create a FirebaseJobDispacther to check new entries every 24h (only when WIFI enabled) and display Android Notification with the new entry

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,8 @@ dependencies {
     // ORMLite
     compile 'com.j256.ormlite:ormlite-android:' + ORM_LITE
 
+    //Firebase JobDispatcher
+    compile 'com.firebase:firebase-jobdispatcher:'+ FIREBASE_JOB_DISPATCHER
+
+
 }
