--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 25
@@ -19,6 +18,7 @@ android {
         }
     }
     // If you need to add more flavors, consider using flavor dimensions.
+    flavorDimensions "version"
     productFlavors {
         mock {
             applicationIdSuffix = ".mock"
@@ -30,48 +30,47 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 
 
     //Support libraries
-    compile 'com.android.support:appcompat-v7:' + SUPPORT_LIBRARY_VERSION
-    compile 'com.android.support:cardview-v7:' + SUPPORT_LIBRARY_VERSION
-    compile 'com.android.support:design:' + SUPPORT_LIBRARY_VERSION
+    implementation 'com.android.support:appcompat-v7:' + SUPPORT_LIBRARY_VERSION
+    implementation 'com.android.support:cardview-v7:' + SUPPORT_LIBRARY_VERSION
+    implementation 'com.android.support:design:' + SUPPORT_LIBRARY_VERSION
 
     //Retrofit & Gson
-    compile 'com.squareup.okhttp3:logging-interceptor:' + OKHTTP3_LOGGING_INTERCEPTOR
-    compile 'com.squareup.retrofit2:retrofit:' + RETROFIT
-    compile 'com.squareup.retrofit2:converter-gson:' + RETROFIT_CONVERTER_GSON
-    compile 'com.google.code.gson:gson:' + GSON
+    implementation 'com.squareup.okhttp3:logging-interceptor:' + OKHTTP3_LOGGING_INTERCEPTOR
+    implementation 'com.squareup.retrofit2:retrofit:' + RETROFIT
+    implementation 'com.squareup.retrofit2:converter-gson:' + RETROFIT_CONVERTER_GSON
+    implementation 'com.google.code.gson:gson:' + GSON
 
     //ButterKnife
-    compile 'com.jakewharton:butterknife:' + BUTTER_KNIFE_VERSION
-    apt 'com.jakewharton:butterknife-compiler:' + BUTTER_KNIFE_VERSION
+    implementation 'com.jakewharton:butterknife:' + BUTTER_KNIFE_VERSION
+    annotationProcessor 'com.jakewharton:butterknife-compiler:' + BUTTER_KNIFE_VERSION
 //    This causes ButterKnife to stop working in some configurations: https://github.com/JakeWharton/butterknife/issues/463
 //    annotationProcessor 'com.jakewharton:butterknife-compiler:' + BUTTER_KNIFE_VERSION
 
     //Glide
-    compile 'com.github.bumptech.glide:glide:' + GLIDE_VERSION
+    implementation 'com.github.bumptech.glide:glide:' + GLIDE_VERSION
 
     //Dagger
-    compile group: "com.google.dagger", name: "dagger", version: DAGGER_VERSION
-    apt "com.google.dagger:dagger-compiler:" + DAGGER_VERSION
+    implementation group: "com.google.dagger", name: "dagger", version: DAGGER_VERSION
+    annotationProcessor "com.google.dagger:dagger-compiler:" + DAGGER_VERSION
 
     //Otto
-    compile 'com.squareup:otto:' + OTTO_VERSION
+    implementation 'com.squareup:otto:' + OTTO_VERSION
 
     //Subsampling Scale Image View
-    compile 'com.davemorrissey.labs:subsampling-scale-image-view:' + SUBSAMPLING_SCALE_IMAGE_VIEW
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:' + SUBSAMPLING_SCALE_IMAGE_VIEW
 
     // ORMLite
-    compile 'com.j256.ormlite:ormlite-android:' + ORM_LITE
+    implementation 'com.j256.ormlite:ormlite-android:' + ORM_LITE
 
-    //Firebase JobDispatcher
-    compile 'com.firebase:firebase-jobdispatcher:'+ FIREBASE_JOB_DISPATCHER
-
-
+    //Javax annotation
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    annotationProcessor("javax.annotation:javax.annotation-api:1.3.2")
 }
