--- a/build.gradle
+++ b/build.gradle
@@ -2,23 +2,25 @@
 
 buildscript {
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:7.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
         // Assists in working with annotation processors for Android Studio.
         // No longer needed with Android Studio 2.2+
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
+//        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
     }
 }
 
